--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html> 
 	<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169256576-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169256576-1');
+</script>
+
 	</head>
 	<body style = "background-image : url('pngtree-english-winter-vacation-training-background-image_186800.jpg'); background-size: 75% 50%; background-repeat: no-repeat;background-size: cover;">
 
